Navigation section changes done

--- a/angular.html
+++ b/angular.html
@@ -33,7 +33,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="menu-item-has-children"><a href="#">Cources</a>
                         <ul class="sub-menu">
-                            <li><a href="software-testing.html">Angular Development</a></li>
+                            <li><a href="software-testing.html">Software Testing</a></li>
                             <li><a href="aws-devops.html">AWS/DevOps</a></li>
                             <li><a href="angular.html">Angular Development</a></li>
                             <li><a href="java.html">Java Development</a></li>
@@ -46,6 +46,7 @@
         </div>
     </div>
     <!-- Mobile Nav Section End -->
+
     <!-- Header Section Start -->
     <header class="th-header header-layout2">
         <div class="header-top">
