#002 - Navigation Section changes

--- a/aws-devops.html
+++ b/aws-devops.html
@@ -2,16 +2,10 @@
 <html lang="eng">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>AWS with DevOps</title>
-    <meta name="author" content="achievers Tech">
-    <meta name="description" content="achievers Tech">
-    <meta name="keywords" content="achievers Tech">
-    <meta name="robots" content="INDEX,FOLLOW">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/up.css">
 </head>
 
 <body class="gradient-body">
@@ -36,7 +31,6 @@
             <div class="th-mobile-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
                     <li class="menu-item-has-children"><a href="#">Cources</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
@@ -52,6 +46,7 @@
         </div>
     </div>
     <!-- Mobile Nav Section End -->
+
     <!-- Header Section Start -->
     <header class="th-header header-layout2">
         <div class="header-top">
@@ -96,7 +91,6 @@
                             <nav class="main-menu d-none d-lg-inline-block">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">About Us</a></li>
                                     <li class="menu-item-has-children">
                                         <a href="#">Cources</a>
                                         <ul class="sub-menu">
@@ -117,7 +111,6 @@
                                 </button>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
