--- a/angular.html
+++ b/angular.html
@@ -125,7 +125,7 @@
                 <h1 class="breadcumb-title">Angular Development</h1>
                 <ul class="breadcumb-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="software-testing.html">Angular Development</a></li>
+                    <li><a href="angular.html">Angular Development</a></li>
                 </ul>
             </div>
         </div>
@@ -364,6 +364,7 @@
         </div>
     </footer>
     <!-- Footer Section End -->
+
     <div class="body-particle" id="body-particle"></div>
     <div class="scroll-top">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
