--- a/index.html
+++ b/index.html
@@ -120,7 +120,37 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-
+    <div class="th-hero-wrapper hero-1" id="hero">
+        <div class="hero-img tilt-active">
+            <img src="assets/img/hero/hero_img_1_1.png" alt="Hero Image">
+        </div>
+        <div class="container">
+            <div class="hero-style1">
+                <h1 class="hero-title">Providing Quality</h1>
+                <h1 class="hero-title">Of<span class="text-theme fw-medium"> EDUCATION</span></h1>
+                <p class="hero-text">Achievers Tech is a leading software development and training institute committed
+                    to delivering industry-level experience and quality training to help candidates achieve their goals.
+                    We serve as an expert software training organization that aims to bridge the gap between the demands
+                    of the industry and the curriculum of educational institutions. Our institute provides a platform
+                    where young and ambitious minds can acquire the skills and knowledge necessary to build successful
+                    careers in the tech industry. Our mission is to equip our candidates with the tools and expertise
+                    they need to thrive in the ever-evolving tech landscape.</p>
+                <div class="btn-group">
+                    <a href="about.html" class="th-btn">ABOUT US<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                    <div class="call-btn"><a href="#" class="play-btn popup-video"><i class="fas fa-play"></i></a>
+                        <div class="media-body">
+                            <a href="#" class="btn-title popup-video">Watch
+                                Our Story</a>
+                            <span class="btn-text">Subscribe Now</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero-shape1"><img src="assets/img/hero/hero_shape_1_1.svg" alt="shape"></div>
+        <div class="hero-shape2"><img src="assets/img/hero/hero_shape_1_2.svg" alt="shape"></div>
+        <div class="hero-shape3"><img src="assets/img/hero/hero_shape_1_3.svg" alt="shape"></div>
+    </div>
     <!-- Intro Section End -->
 
     <!-- About Section Start -->
