--- a/index.html
+++ b/index.html
@@ -120,36 +120,46 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-    <div class="th-hero-wrapper hero-1" id="hero">
-        <div class="hero-img tilt-active">
-            <img src="assets/img/hero/hero_img_1_1.png" alt="Hero Image">
-        </div>
-        <div class="container">
-            <div class="hero-style1">
-                <h1 class="hero-title">Providing Quality</h1>
-                <h1 class="hero-title">Of<span class="text-theme fw-medium"> EDUCATION</span></h1>
-                <p class="hero-text">Achievers Tech is a leading software development and training institute committed
-                    to delivering industry-level experience and quality training to help candidates achieve their goals.
-                    We serve as an expert software training organization that aims to bridge the gap between the demands
-                    of the industry and the curriculum of educational institutions. Our institute provides a platform
-                    where young and ambitious minds can acquire the skills and knowledge necessary to build successful
-                    careers in the tech industry. Our mission is to equip our candidates with the tools and expertise
-                    they need to thrive in the ever-evolving tech landscape.</p>
-                <div class="btn-group">
-                    <a href="about.html" class="th-btn">ABOUT US<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                    <div class="call-btn"><a href="#" class="play-btn popup-video"><i class="fas fa-play"></i></a>
-                        <div class="media-body">
-                            <a href="#" class="btn-title popup-video">Watch
-                                Our Story</a>
-                            <span class="btn-text">Subscribe Now</span>
+    <div class="th-hero-wrapper hero-15 background-image shape-mockup-wrap" id="hero"
+        style="background-image: url(assets/img/bg/hero_bg_2.png);">
+        <div class="hero-inner">
+            <div class="container th-container4">
+                <div class="row">
+                    <div class="col-xl-7">
+                        <div class="hero-style15"><span class="sub-title">
+                                <div class="icon-masking me-2"><span class="mask-icon bg-mask"
+                                        style="mask-image: url(assets/img/theme-img/title_shape_3.svg);"></span>
+                                    <img src="assets/img/theme-img/title_shape_3.svg" alt="shape">
+                                </div>Welcome to
+                                Webteck
+                            </span>
+                            <h1 class="hero-title">Empowering Businesses Through <span
+                                    class="text-theme">Technology</span></h1>
+                            <p class="hero-text">Webteck is a leading IT agency dedicated to empowering businesses
+                                through the strategic implementation of technology. We are passionate about helping our
+                                clients achieve their goals.</p>
+                            <div class="btn-group"><a href="service.html"
+                                    class="th-btn style-radius text-capitalize">View All Services</a> <a
+                                    href="about.html" class="th-btn style7 style-radius text-capitalize">Get In
+                                    Touch</a></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="hero-shape1"><img src="assets/img/hero/hero_shape_1_1.svg" alt="shape"></div>
-        <div class="hero-shape2"><img src="assets/img/hero/hero_shape_1_2.svg" alt="shape"></div>
-        <div class="hero-shape3"><img src="assets/img/hero/hero_shape_1_3.svg" alt="shape"></div>
+        <div class="th-hero15-img">
+            <div class="hero15-img bg-mask" style="mask-image: url(&quot;assets/img/hero/hero_shape_4.png&quot;);"><img
+                    src="assets/img/hero/hero_img_12_1.jpg" alt=""></div>
+            <div class="hero15-shape bg-mask" style="mask-image: url(&quot;assets/img/hero/hero_shape_4.1.png&quot;);">
+            </div>
+        </div>
+
+        <div class="shape-mockup movingX d-none d-xl-block" style="bottom: 20%; left: 5%;"><img
+                src="assets/img/shape/shape_4.png" alt="shape"></div>
+        <div class="shape-mockup jump d-none d-xl-block" style="bottom: 14%; left: 45%;"><img
+                src="assets/img/shape/shape_5.png" alt="shape"></div>
+        <div class="shape-mockup z-index-3 d-none d-xxl-block" style="top: 40%; right: 34%;"><img
+                src="assets/img/shape/shape_6.png" alt="shape"></div>
     </div>
     <!-- Intro Section End -->
 
