--- a/contact.html
+++ b/contact.html
@@ -146,8 +146,7 @@
                         <div class="media-body">
                             <h4 class="box-title">Our Office Address</h4>
                             <span class="contact-info_text">
-                                ABC Junction Apartments, <br>Near Akurdi Railway
-                                Station, Nigdi Pradhikaran
+                                ABC, Junction, 3rd Floor, Near Akurdi Railway Station, Pune - 411044
                             </span>
                         </div>
                     </div>
@@ -220,7 +219,7 @@
                             <div class="work-item"><span class="work-item_number">02</span>
                                 <p class="work-text">Gather feedback from students to understand their requirment.</p>
                             </div>
-                            <div class="work-item"><span class="work-item_number">02</span>
+                            <div class="work-item"><span class="work-item_number">03</span>
                                 <p class="work-text">Guidance Provided for thier needs.</p>
                             </div>
                         </div>
@@ -274,14 +273,12 @@
                         <div class="widget footer-widget">
                             <h3 class="widget_title">About Us</h3>
                             <div class="th-widget-about">
-                                <p class="about-text">Professionally redefine transparent ROI through low-risk
-                                    high-yield imperatives. Progressively create empowered. cost effective users via
-                                    team driven.</p>
-                                <div class="th-social"><a href="https://www.facebook.com/"><i
-                                            class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i
-                                            class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i
-                                            class="fab fa-linkedin-in"></i></a> <a href="https://www.whatsapp.com/"><i
-                                            class="fab fa-whatsapp"></i></a> <a href="https://www.youtube.com/"><i
+                                <p class="about-text">Passionate about shaping the next generation of tech talent, Founded by seasoned software professionals, we bring real world exertise and Industy insights to our training and placement programs.</p>
+                                <div class="th-social"><a href="#"><i
+                                            class="fab fa-facebook-f"></i></a> <a href="#"><i
+                                            class="fab fa-twitter"></i></a> <a href="#"><i
+                                            class="fab fa-linkedin-in"></i></a> <a href="#"><i
+                                            class="fab fa-whatsapp"></i></a> <a href="#"><i
                                             class="fab fa-youtube"></i></a></div>
                             </div>
                         </div>
