--- a/index.html
+++ b/index.html
@@ -50,7 +50,30 @@
     <!-- Header Section Start -->
     <header class="th-header header-layout2">
         <div class="header-top">
-            
+            <div class="container">
+                <div class="row justify-content-center justify-content-lg-between align-items-center gy-2">
+                    <div class="col-auto d-none d-lg-block">
+                        <div class="header-links">
+                            <ul>
+                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a></li>
+                                <li><i class="fas fa-envelope"></i>
+                                    <ahref="mailto:info@achievertech.co.in">info@achievertech.co.in</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="header-social">
+                            <span class="social-title">Follow Us On : </span>
+                            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--  Navigation Section Start -->
         <div class="sticky-wrapper">
@@ -97,21 +120,7 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-    <div class="th-hero-wrapper hero-5" id="hero">
-        <div class="hero-inner">
-            <div class="th-hero-bg background-image"
-                style="background-image: url(&quot;assets/img/hero/hero_img_5_1.png&quot;);"></div>
-            <div class="container th-container5">
-                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Startup Agency</span>
-                    <h1 class="hero-title text-white">Clear Thinking Makes Bright Future!</h1>
-                    <p class="hero-text text-white">Repurpose intuitive total linkage after timely mindshare. Credibly
-                        coonate reliable collaboration and idea-sharing after.</p>
-                    <div class="btn-group mt-35"><a href="service.html" class="th-btn style6 style-radius">View
-                            Services</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="th-hero-wrapper hero-5" id="hero"><div class="hero-inner"><div class="th-hero-bg background-image" style="background-image: url(&quot;assets/img/hero/hero_img_5_1.png&quot;);"></div><div class="container th-container5"><div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Startup Agency</span><h1 class="hero-title text-white">Clear Thinking Makes Bright Future!</h1><p class="hero-text text-white">Repurpose intuitive total linkage after timely mindshare. Credibly coonate reliable collaboration and idea-sharing after.</p><div class="btn-group mt-35"><a href="service.html" class="th-btn style6 style-radius">View Services</a></div></div></div></div></div>
     <!-- Intro Section End -->
 
     <!-- About Section Start -->
