--- a/java.html
+++ b/java.html
@@ -119,17 +119,21 @@
     </header>
     <!-- Header Section End -->
 
-    <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcumb-bg.jpg">
-        <div class="container">
-            <div class="breadcumb-content">
-                <h1 class="breadcumb-title">Java Development</h1>
-                <ul class="breadcumb-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="java.html">Java Development</a></li>
-                </ul>
+    <section class="position-relative space">
+        <div class="th-bg-img background-image" style="background-image: url(&quot;assets/img/bg/cta_bg_2.jpg&quot;);">
+            <img src="assets/img/bg/bg_overlay_1.png" alt="overlay"></div>
+        <div class="container z-index-common">
+            <div class="row justify-content-center">
+                <div class="col-xl-6 col-lg-7 col-md-9 text-center">
+                    <div class="title-area mb-35"><span class="sub-title">
+                            <div class="icon-masking me-2"><span class="mask-icon bg-mask"
+                                    style="mask-image: url(&quot;assets/img/theme-img/title_shape_2.svg&quot;);"></span>
+                                <img src="assets/img/theme-img/title_shape_2.svg" alt="shape"></div>JAVA DEVELOPMENT
+                        </span>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <div class="widget-area">
         <div class="container mt-5 px-3">
