--- a/index.html
+++ b/index.html
@@ -120,7 +120,21 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-    <div class="th-hero-wrapper hero-5" id="hero"><div class="hero-inner"><div class="th-hero-bg background-image" style="background-image: url(&quot;assets/img/hero/hero_img_5_1.png&quot;);"></div><div class="container th-container5"><div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Startup Agency</span><h1 class="hero-title text-white">Clear Thinking Makes Bright Future!</h1><p class="hero-text text-white">Repurpose intuitive total linkage after timely mindshare. Credibly coonate reliable collaboration and idea-sharing after.</p><div class="btn-group mt-35"><a href="service.html" class="th-btn style6 style-radius">View Services</a></div></div></div></div></div>
+    <div class="th-hero-wrapper hero-5">
+        <div class="hero-inner" style="height: 825px;">
+            <div class="th-hero-bg background-image"
+                style="background-image: url(&quot;assets/img/hero/hero_img_5_1.png&quot;);"></div>
+            <div class="container th-container5">
+                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Startup Agency</span>
+                    <h1 class="hero-title text-white">Clear Thinking Makes Bright Future!</h1>
+                    <p class="hero-text text-white">Repurpose intuitive total linkage after timely mindshare. Credibly
+                        coonate reliable collaboration and idea-sharing after.</p>
+                    <div class="btn-group mt-35"><a href="service.html" class="th-btn style6 style-radius">View
+                            Services</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Intro Section End -->
 
     <!-- About Section Start -->
