--- a/index.html
+++ b/index.html
@@ -120,17 +120,15 @@
     <!-- Header Section End -->
 
     <!-- Intro Section Start -->
-    <div class="th-hero-wrapper hero-5">
-        <div class="hero-inner" style="height: 825px;">
+    <div class="th-hero-wrapper" style="height: 725px; padding-top: -85px; margin-top: -85px;">
+        <div class="hero-inner" >
             <div class="th-hero-bg background-image"
-                style="background-image: url(&quot;assets/img/hero/hero_img_5_1.png&quot;);"></div>
+                style="background-image: url(assets/img/hero/hero_img_5_1.png);"></div>
             <div class="container th-container5">
-                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Startup Agency</span>
-                    <h1 class="hero-title text-white">Clear Thinking Makes Bright Future!</h1>
-                    <p class="hero-text text-white">Repurpose intuitive total linkage after timely mindshare. Credibly
-                        coonate reliable collaboration and idea-sharing after.</p>
-                    <div class="btn-group mt-35"><a href="service.html" class="th-btn style6 style-radius">View
-                            Services</a></div>
+                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Software Training Institute</span>
+                    <h1 class="hero-title text-white">Accelerate Your Career Growth & Upskill Yourself!</h1>
+                    <div class="btn-group mt-35"><a href="angular.html" class="th-btn style6 style-radius">View
+                            All Cources</a></div>
                 </div>
             </div>
         </div>
