--- a/angular.html
+++ b/angular.html
@@ -121,18 +121,20 @@
 
     <section class="position-relative space">
         <div class="th-bg-img background-image" style="background-image: url(&quot;assets/img/bg/cta_bg_2.jpg&quot;);">
-            <img src="assets/img/bg/bg_overlay_1.png" alt="overlay"></div>
+            <img src="assets/img/bg/bg_overlay_1.png" alt="overlay">
+        </div>
         <div class="container z-index-common">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-7 col-md-9 text-center">
                     <div class="title-area mb-35"><span class="sub-title">
                             <div class="icon-masking me-2"><span class="mask-icon bg-mask"
                                     style="mask-image: url(&quot;assets/img/theme-img/title_shape_2.svg&quot;);"></span>
-                                <img src="assets/img/theme-img/title_shape_2.svg" alt="shape"></div>WEB DEVELOPMENT
+                                <img src="assets/img/theme-img/title_shape_2.svg" alt="shape">
+                            </div> WEB DEVELOEPMENT
                         </span>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- Cource Outline -->
@@ -246,6 +248,19 @@
                             <p>Sessions with experiance mentor's ensures learning Excellence.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container elementor-element elementor-element-9a38a21 elementor-widget elementor-widget-text-editor"
+        data-id="9a38a21" data-element_type="widget" data-widget_type="text-editor.default">
+        <div class="elementor-widget-container">
+            <div class="widget widget_download  ">
+                <h4 class="widget_title">Download Brochure</h4>
+                <div class="container download-widget-wrap">
+                    <a href="#" class="th-btn"><i class="fa-light fa-file-pdf me-2"></i>DOWNLOAD PDF</a>
+                    <a href="#" class="th-btn style5"><i class="fa-light fa-file-lines me-2"></i>DOWNLOAD DOC</a>
                 </div>
             </div>
         </div>
