--- a/software-testing.html
+++ b/software-testing.html
@@ -448,6 +448,26 @@
                 </div>
             </div>
         </div>
+        <div class="container elementor-element elementor-element-9a38a21 elementor-widget elementor-widget-text-editor"
+            data-id="9a38a21" data-element_type="widget" data-widget_type="text-editor.default">
+            <div class="elementor-widget-container">
+                <div class="widget widget_download  ">
+                    <h4 class="widget_title">Download Brochure</h4>
+                    <div class="container download-widget-wrap">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <a href="#" class="th-btn col-sm-4"><i class="fa-light fa-file-pdf me-2"></i>DOWNLOAD
+                                    PDF</a>
+                            </div>
+                            <div class="col-sm-6">
+                                <a href="#" class="th-btn style5 col-sm-4"><i
+                                        class="fa-light fa-file-lines me-2"></i>DOWNLOAD DOC</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container mt-5 px-3">
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
