--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
 
     <!-- Intro Section Start -->
     <div class="th-hero-wrapper" style="height: 725px; padding-top: -85px; margin-top: -85px;">
-        <div class="hero-inner" >
-            <div class="th-hero-bg background-image"
-                style="background-image: url(assets/img/hero/hero_img_5_1.png);"></div>
+        <div class="hero-inner">
+            <div class="th-hero-bg background-image" style="background-image: url(assets/img/hero/hero_img_5_1.png);">
+            </div>
             <div class="container th-container5">
-                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Software Training Institute</span>
+                <div class="hero-style5"><span class="sub-title style1 text-white">We’re Leading Software Training
+                        Institute</span>
                     <h1 class="hero-title text-white">Accelerate Your Career Growth & Upskill Yourself!</h1>
                     <div class="btn-group mt-35"><a href="angular.html" class="th-btn style6 style-radius">View
                             All Cources</a></div>
