--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
 
     <!-- Header Section Start -->
     <header class="th-header header-layout2">
-        <div class="header-top">
+        <div class="header-top bg-title">
             <div class="container">
                 <div class="row justify-content-center justify-content-lg-between align-items-center gy-2">
                     <div class="col-auto d-none d-lg-block">
