faq page updated

--- a/faq.html
+++ b/faq.html
@@ -294,7 +294,7 @@
             </div>
         </div>
     </div>
-    <div class="space background-image" id="contact-sec"
+    <div class="space background-image" style="background-color: rgb(212, 207, 207);" id="contact-sec"
         style="background-image: url(&quot;assets/img/bg/form_bg_1.jpg&quot;);">
         <div class="container">
             <div class="title-area text-center"><span class="sub-title">
