faq page updated subject line

--- a/faq.html
+++ b/faq.html
@@ -314,10 +314,11 @@
                             placeholder="Phone number"> <i class="fal fa-phone"></i></div>
                     <div class="form-group col-md-6"><select name="subject" id="subject" class="form-select">
                             <option value="" disabled="disabled" selected="selected" hidden="">Select Subject</option>
-                            <option value="IT Consult">IT Consult</option>
-                            <option value="UI/UX Design">UI/UX Design</option>
-                            <option value="Branding Solution">Branding Solution</option>
-                            <option value="Product Marketing">Product Marketing</option>
+                            <option value="Web Development">Web Development</option>
+                            <option value="Full Stack Development">Full Stack Development</option>
+                            <option value="Software Testing">Software Testing</option>
+                            <option value="Cloud Technologies">Cloud Technologies</option>
+                            <option value="others">Others</option>
                         </select> <i class="fal fa-file-lines"></i></div>
                     <div class="form-group col-12"><textarea name="message" id="message" cols="30" rows="3"
                             class="form-control" placeholder="Write Your Message"></textarea> <i
