--- a/faq.html
+++ b/faq.html
@@ -304,7 +304,9 @@
                 </span>
                 <h2 class="sec-title">Request A Free <span class="text-theme">Consultation</span></h2>
             </div>
-            <form action="mail.php" method="POST" class="quote-form ajax-contact">
+            <form action="mailto:info@achievertech.co.in" method="POST" class="quote-form ajax-contact"
+            enctype="multipart/form-data"
+            name="EmailForm">
                 <div class="row">
                     <div class="form-group col-md-6"><input type="text" class="form-control" name="name" id="name"
                             placeholder="Enter Your Name"> <i class="fal fa-user"></i></div>
@@ -323,7 +325,7 @@
                     <div class="form-group col-12"><textarea name="message" id="message" cols="30" rows="3"
                             class="form-control" placeholder="Write Your Message"></textarea> <i
                             class="fal fa-pencil"></i></div>
-                    <div class="form-btn text-center col-12"><button class="th-btn">Send Message<i
+                    <div class="form-btn text-center col-12"><button class="th-btn" type="submit" value="submit">Send Message<i
                                 class="fa-regular fa-arrow-right ms-2"></i></button></div>
                 </div>
                 <p class="form-messages mb-0 mt-3"></p>
