--- a/faq.html
+++ b/faq.html
@@ -325,7 +325,7 @@
                     <div class="form-group col-12"><textarea name="message" id="message" cols="30" rows="3"
                             class="form-control" placeholder="Write Your Message"></textarea> <i
                             class="fal fa-pencil"></i></div>
-                    <div class="form-btn text-center col-12"><button class="th-btn" type="submit" value="submit">Send Message<i
+                    <div class="form-btn text-center col-12"><button class="th-btn" type="Submit" value="Submit">Send Message<i
                                 class="fa-regular fa-arrow-right ms-2"></i></button></div>
                 </div>
                 <p class="form-messages mb-0 mt-3"></p>
