header and footer chages done

--- a/java.html
+++ b/java.html
@@ -34,9 +34,11 @@
                     <li class="menu-item-has-children"><a href="#">Courses</a>
                         <ul class="sub-menu">
                             <li><a href="software-testing.html">Software Testing</a></li>
-                            <li><a href="aws-devops.html">AWS/DevOps</a></li>
                             <li><a href="angular.html">Angular Development</a></li>
                             <li><a href="java.html">Java Development</a></li>
+                            <li><a href="dotnet.html">Dot Net</a></li>
+                            <li><a href="fullstack.html">Full Stack Development</a></li>
+                            <li><a href="aws-devops.html">AWS/DevOps</a></li>
                         </ul>
                     </li>
                     <li><a href="upcomming-batches.html">Upcoming Batches</a></li>
@@ -66,8 +68,6 @@
                         <div class="header-social">
                             <span class="social-title">Follow Us On : </span>
                             <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                             <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                         </div>
@@ -95,9 +95,11 @@
                                         <a href="#">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="software-testing.html">Software Testing</a></li>
-                                            <li><a href="aws-devops.html">AWS/DevOps</a></li>
                                             <li><a href="angular.html">Angular Development</a></li>
                                             <li><a href="java.html">Java Development</a></li>
+                                            <li><a href="dotnet.html">Dot Net</a></li>
+                                            <li><a href="fullstack.html">Full Stack Development</a></li>
+                                            <li><a href="aws-devops.html">AWS/DevOps</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="upcomming-batches.html">Upcoming Batches</a></li>
